--- a/portfolio.html
+++ b/portfolio.html
@@ -38,4 +38,7 @@
     <img>
   </div>
   
+  <footer>
+    <p class="attribution">© Madeleine Casey 2025.  All graphics created by Madeleine Casey.</p>
+  </footer>
 </body>
