--- a/resume.html
+++ b/resume.html
@@ -14,4 +14,8 @@
   <body>
     <!-- To Add to the directory- PDF file version of my resume -->
     <a href="./directory/casey_2025_resume.pdf" download="caseyresume">Download my resume</a>
+
+    <footer>
+        <p class="attribution">© Madeleine Casey 2025.  All graphics created by Madeleine Casey.</p>
+      </footer>
   </body>
