adding buttons to navigate

--- a/portfolio.html
+++ b/portfolio.html
@@ -38,6 +38,8 @@
     <img>
   </div>
   
+  <button id="home-page"><a href="index.html">Home Page</a></button>
+  
   <footer>
     <p class="attribution">© Madeleine Casey 2025.  All graphics created by Madeleine Casey.</p>
   </footer>
