--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Galindo&display=swap" rel="stylesheet">
+    <!--<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Calistoga&family=Chela+One&family=Cherry+Swash&family=Dangrek&family=DynaPuff&family=Gorditas&family=Lily+Script+One&family=Mochiy+Pop+P+One&family=Moo+Lah+Lah&display=swap" rel="stylesheet">
+  -->
     <script src="scripts.js"></script>
   </head>
 
