--- a/resume.html
+++ b/resume.html
@@ -15,6 +15,7 @@
     <!-- To Add to the directory- PDF file version of my resume -->
     <a href="./directory/casey_2025_resume.pdf" download="caseyresume">Download my resume</a>
 
+    <button id="home-page"><a href="index.html">Home Page</a></button>
     <footer>
         <p class="attribution">© Madeleine Casey 2025.  All graphics created by Madeleine Casey.</p>
       </footer>
