--- a/portfolio.html
+++ b/portfolio.html
@@ -13,33 +13,20 @@
 <body>
   <h1>Student Work Portfolio</h1>
 
-  <div>
-    <h3>Project 1 Title</h3>
-    <img>
-  </div>
+  <div class="container">
+    <div>
+        <h3>Project 1 Title</h3>
+        <img src="" alt="">
+    </div>
+    <div>
+        <h3>Project 2 Title</h3>
+        <img>
+    </div>
+</div>
 
-  <div>
-    <h3>Project 2 Title</h3>
-    <img>
-  </div>
-
-  <div>
-    <h3>Project 3 Title</h3>
-    <img>
-  </div>
-
-  <div>
-    <h3>Project 4 Title</h3>
-    <img>
-  </div>
-
-  <div>
-    <h3>Project 5 Title</h3>
-    <img>
-  </div>
-  
+ 
   <button id="home-page"><a href="index.html">Home Page</a></button>
-  
+
   <footer>
     <p class="attribution">© Madeleine Casey 2025.  All graphics created by Madeleine Casey.</p>
   </footer>
