--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header class="homepage-head-background">
     <h1 id='welcome'>Maddy Casey<br>Graduation Portfolio</h1>
     <!-- Note to Self- Add Button Links to my porfolio and Resume Page -->
-    <button id="welcome-text"><a href="portfolio.html">Portfolio</a></button>
+    <button id="portfolio"><a href="portfolio.html">Portfolio</a></button>
     <button id="revert"><a href="resume.html">Resume</a></button>
   </header>
 
