--- a/portfolio.html
+++ b/portfolio.html
@@ -16,11 +16,11 @@
   <div class="container">
     <div>
         <h3>Project 1 Title</h3>
-        <img src="" alt="">
+        <img class="project-thumbnail" src="test_img.png" alt="">
     </div>
     <div>
         <h3>Project 2 Title</h3>
-        <img>
+        <img class="project-thumbnail" src="test_img.svg" alt="">
     </div>
 </div>
 
