--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,18 @@
         <h3>Project 2 Title</h3>
         <img class="project-thumbnail" src="test_img.svg" alt="">
     </div>
+    <div>
+      <h3>Project 3 Title</h3>
+      <img class="project-thumbnail" src="test_img.svg" alt="">
+  </div>
+  <div>
+    <h3>Project 4 Title</h3>
+    <img class="project-thumbnail" src="test_img.svg" alt="">
+  </div>
+  <div>
+  <h3>Project 5 Title</h3>
+  <img class="project-thumbnail" src="test_img.svg" alt="">
+  </div>
 </div>
 
  
