--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <h1 id='welcome'>Maddy Casey<br>Graduation Portfolio</h1>
     <!-- Note to Self- Add Button Links to my porfolio and Resume Page -->
   </header>
-  <button id="portfolio"><a href="portfolio.html">Portfolio</a></button>
-  <button id="revert"><a href="resume.html">Resume</a></button>
+  <button id="portfolio-button"><a href="portfolio.html">Portfolio</a></button>
+  <button id="resume-button"><a href="resume.html">Resume</a></button>
   <section class="homepage">
   	
     <!-- Note- specifying width as 100% for images is necessary to ensure images fill the exact size of their div containers- done on advice from the tech tutor -->
