--- a/resume.html
+++ b/resume.html
@@ -13,8 +13,7 @@
 
   <body>
     <!-- To Add to the directory- PDF file version of my resume -->
-    <a href="./directory/casey_2025_resume.pdf" download="caseyresume">Download my resume</a>
-
+    <a id="resume-download" href="./directory/casey_2025_resume.pdf" download="caseyresume">Download my resume</a><br>
     <button id="home-page"><a href="index.html">Home Page</a></button>
     
     <footer>
