responsive design testing

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Galindo&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cantora+One&display=swap" rel="stylesheet">
     <!--<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Calistoga&family=Chela+One&family=Cherry+Swash&family=Dangrek&family=DynaPuff&family=Gorditas&family=Lily+Script+One&family=Mochiy+Pop+P+One&family=Moo+Lah+Lah&display=swap" rel="stylesheet">
@@ -42,11 +43,11 @@
     </section>
 </section>
 -->
-
+<!--
   <div class="about-message">
         <h2>Test</h2>
   </div>
-    
+--> 
 
   <footer>
     <p class="attribution">© Madeleine Casey 2025.  All graphics created by Madeleine Casey.</p>
