--- a/portfolio.html
+++ b/portfolio.html
@@ -9,9 +9,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Calistoga&family=Chela+One&family=Cherry+Swash&family=Dangrek&family=DynaPuff&family=Gorditas&family=Lily+Script+One&family=Mochiy+Pop+P+One&family=Moo+Lah+Lah&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cantora+One&display=swap" rel="stylesheet">
   </head>
 <body>
+<header>
   <h1>Student Work Portfolio</h1>
+</header>
 
   <div class="container">
     <div>
