--- a/resume.html
+++ b/resume.html
@@ -9,9 +9,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Calistoga&family=Chela+One&family=Cherry+Swash&family=Dangrek&family=DynaPuff&family=Gorditas&family=Lily+Script+One&family=Mochiy+Pop+P+One&family=Moo+Lah+Lah&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cantora+One&display=swap" rel="stylesheet">
   </head>
 
   <body>
+  <header>
+    <h1>Resume</h1>
+  </header>
     <!-- To Add to the directory- PDF file version of my resume -->
     <a id="resume-download" href="./directory/casey_2025_resume.pdf" download="caseyresume">Download my resume</a><br>
     <button id="home-page"><a href="index.html">Home Page</a></button>
