updating portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,24 +18,24 @@
 
   <div class="container">
     <div>
-        <h3>Project 1 Title</h3>
-        <img class="project-thumbnail" src="test_img.png" alt="">
+        <h2>Queer Speculative Fiction Libguide</h2>
+        <a href="libguide.html"><img class="project-thumbnail" src="test_img.png" alt=""></a>
     </div>
     <div>
-        <h3>Project 2 Title</h3>
-        <img class="project-thumbnail" src="test_img.svg" alt="">
+        <h2>Project 2 Title</h2>
+        <a href=""><img class="project-thumbnail" src="test_img.svg" alt=""></a>
     </div>
     <div>
-      <h3>Project 3 Title</h3>
-      <img class="project-thumbnail" src="test_img.svg" alt="">
+      <h2>Project 3 Title</h2>
+      <a href=""><img class="project-thumbnail" src="test_img.svg" alt=""></a>
   </div>
   <div>
-    <h3>Project 4 Title</h3>
-    <img class="project-thumbnail" src="test_img.svg" alt="">
+    <h2>Project 4 Title</h2>
+    <a href=""><img class="project-thumbnail" src="test_img.svg" alt=""></a>
   </div>
   <div>
-  <h3>Project 5 Title</h3>
-  <img class="project-thumbnail" src="test_img.svg" alt="">
+  <h2>Project 5 Title</h2>
+  <a href=""><img class="project-thumbnail" src="test_img.svg" alt=""></a>
   </div>
 </div>
 
