--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
   <div class="container">
     <div>
         <h2>Queer Speculative Fiction Libguide</h2>
-        <a href="libguide.html"><img class="project-thumbnail" src="test_img.png" alt=""></a>
+        <a href="libguide.html"><img class="project-thumbnail" src="libguide-thumb.svg" alt=""></a>
     </div>
     <div>
         <h2>Project 2 Title</h2>
