fixing titles and spacing

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,19 +22,19 @@
         <a href="libguide.html"><img class="project-thumbnail" src="libguide-thumb.svg" alt=""></a>
     </div>
     <div>
-        <h2>Project 2 Title</h2>
+        <h2>Books as Art,<br>Art as Data</h2>
         <a href=""><img class="project-thumbnail" src="test_img.svg" alt=""></a>
     </div>
     <div>
-      <h2>Project 3 Title</h2>
+      <h2>Python<br>Metadata<br>Validator</h2>
       <a href=""><img class="project-thumbnail" src="test_img.svg" alt=""></a>
   </div>
   <div>
-    <h2>Project 4 Title</h2>
+    <h2>This Book Is Challeng(ing/ed)</h2>
     <a href=""><img class="project-thumbnail" src="test_img.svg" alt=""></a>
   </div>
   <div>
-  <h2>Project 5 Title</h2>
+  <h2>Exploring Demographic Homogeneity in Librarianship</h2>
   <a href=""><img class="project-thumbnail" src="test_img.svg" alt=""></a>
   </div>
 </div>
