--- a/portfolio.html
+++ b/portfolio.html
@@ -23,19 +23,19 @@
     </div>
     <div>
         <h2>Books as Art,<br>Art as Data</h2>
-        <a href=""><img class="project-thumbnail" src="test_img.svg" alt=""></a>
+        <a href="baaaad.html"><img class="project-thumbnail" src="baaaad-thumb.svg" alt=""></a>
     </div>
     <div>
-      <h2>Python<br>Metadata<br>Validator</h2>
-      <a href=""><img class="project-thumbnail" src="test_img.svg" alt=""></a>
+      <h2>Python<br>Metadata Validator</h2>
+      <a href="validator.html"><img class="project-thumbnail" src="validator-thumb.svg" alt=""></a>
   </div>
   <div>
     <h2>This Book Is Challeng(ing/ed)</h2>
-    <a href=""><img class="project-thumbnail" src="test_img.svg" alt=""></a>
+    <a href="collage.html"><img class="project-thumbnail" src="collage-thumb.svg" alt=""></a>
   </div>
   <div>
   <h2>Exploring Demographic Homogeneity in Librarianship</h2>
-  <a href=""><img class="project-thumbnail" src="test_img.svg" alt=""></a>
+  <a href="lib-diversity.html"><img class="project-thumbnail" src="lib-diversity-thumb.svg" alt=""></a>
   </div>
 </div>
 
