--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
     <h1 id='welcome'>Maddy Casey<br>Graduation Portfolio</h1>
     <!-- Note to Self- Add Button Links to my porfolio and Resume Page -->
   </header>
-  <p>I am a librarian</p>
+  <div class="home-container">
+    <div id="carousel">
+    <img src="libguide-thumb.svg" alt="">
+    </div>
+    <div id="about-blurb">
+    <h2>About Me:</h2>
+    <p>I am a MsLIS graduate student at the Pratt Institute, digital humanist, and life-long library patron. My research is grounded in the principles of data feminism, and a desire to connect people to information while making space for nuance and exploration. My passion for libraries is grounded in a desire to help promote information literacy and access through fun programming and critical pedagogy.</p>
+    </div>
+  </div>
   <button id="portfolio-button"><a href="portfolio.html">Portfolio</a></button>
   <button id="resume-button"><a href="resume.html">Resume</a></button>
 
