iframe pdf test

--- a/libguide.html
+++ b/libguide.html
@@ -15,6 +15,12 @@
     <header>
         <h1>Queer Speculative Fiction Libguide</h1>
     </header>
+    <object data="Lorum Ipsum Test PDF.pdf#page=1" type="application/pdf" width="100%" height="100%">
+        <iframe src="Lorum Ipsum Test PDF.pdf#page=1" width="100%" height="100%" style="border: none;">
+          This browser does not support PDFs. Please download the PDF to view it: 
+          <a href="Lorum Ipsum Test PDF.pdf">Download PDF</a>
+        </iframe>
+     </object>
     <footer>
     </footer>
 </body>
