--- a/libguide.html
+++ b/libguide.html
@@ -15,12 +15,22 @@
     <header>
         <h1>Queer Speculative Fiction Libguide</h1>
     </header>
-    <object data="Lorum Ipsum Test PDF.pdf#page=1" type="application/pdf" width="100%" height="100%">
-        <iframe src="Lorum Ipsum Test PDF.pdf#page=1" width="100%" height="100%" style="border: none;">
-          This browser does not support PDFs. Please download the PDF to view it: 
-          <a href="Lorum Ipsum Test PDF.pdf">Download PDF</a>
-        </iframe>
-     </object>
+    <div class="portfolio-page-content">
+        <div>
+            <p>Project Link</p>
+            <p>Project Description</p>
+            <p>Methods</p>
+            <p>Showcased Skills</p>
+        </div>
+        <div class="portfolio-page-embed">
+        <object data="Lorum Ipsum Test PDF.pdf#page=1" type="application/pdf" width="100%" height="100%">
+            <iframe src="Lorum Ipsum Test PDF.pdf#page=1" width="100%" height="100%" style="border: none;">
+            This browser does not support PDFs. Please download the PDF to view it: 
+            <a href="Lorum Ipsum Test PDF.pdf">Download PDF</a>
+            </iframe>
+         </object>
+        </div>
+     </div>
     <footer>
     </footer>
 </body>
