--- a/libguide.html
+++ b/libguide.html
@@ -17,6 +17,7 @@
     </header>
     <div class="portfolio-page-content">
         <div>
+            <!-- Should I make this a table? Or should I do headers and then content? Or an accordion?? -->
             <p>Project Link</p>
             <p>Project Description</p>
             <p>Methods</p>
