portfolio page update

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,23 +18,33 @@
 
   <div class="container">
     <div>
-        <h2>Queer Speculative Fiction Libguide</h2>
+        <div class="portfolio-heading">
+          <h2>Queer Speculative Fiction Libguide</h2>
+        </div>
         <a href="libguide.html"><img class="project-thumbnail" src="libguide-thumb.svg" alt=""></a>
     </div>
     <div>
+      <div class="portfolio-heading">
         <h2>Books as Art,<br>Art as Data</h2>
+      </div>
         <a href="baaaad.html"><img class="project-thumbnail" src="baaaad-thumb.svg" alt=""></a>
     </div>
     <div>
-      <h2>Python<br>Metadata Validator</h2>
+      <div class="portfolio-heading">
+        <h2>Python<br>Metadata Validator</h2>
+      </div>
       <a href="validator.html"><img class="project-thumbnail" src="validator-thumb.svg" alt=""></a>
   </div>
   <div>
+    <div class="portfolio-heading">
     <h2>Exploring Demographic Homogeneity in Librarianship</h2>
-    <a href="lib-diversity.html"><img class="project-thumbnail" src="lib-diversity-thumb.svg" alt=""></a>
     </div>
+    <a href="lib-diversity.html"><img class="project-thumbnail" src="lib-diversity-thumb.svg" alt=""></a>
+  </div>
   <div>
+    <div class="portfolio-heading">
     <h2>This Book Is Challeng(ing/ed)</h2>
+    </div>
     <a href="collage.html"><img class="project-thumbnail" src="collage-thumb.svg" alt=""></a>
   </div>
 </div>
