--- a/portfolio.html
+++ b/portfolio.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Calistoga&family=Chela+One&family=Cherry+Swash&family=Dangrek&family=DynaPuff&family=Gorditas&family=Lily+Script+One&family=Mochiy+Pop+P+One&family=Moo+Lah+Lah&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Cantora+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Cantora+One&family=Galindo&family=Gorditas:wght@400;700&family=Rethink+Sans:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
   </head>
 <body>
 <header>
