--- a/libguide.html
+++ b/libguide.html
@@ -12,8 +12,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Cantora+One&display=swap" rel="stylesheet">
   </head>
 <body>
-    <header>
-        <h1>Queer Speculative Fiction Libguide</h1>
+    <header class="libguide-head-background">
+        <h1 class="libguide-h1">Queer Speculative<br>Fiction Libguide</h1>
     </header>
     <div class="portfolio-page-content">
         <div>
