--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
   </header>
   <div class="home-container">
     <div id="about-blurb">
-      <h2>About Me:</h2>
-      <p>I am a MsLIS graduate student at the Pratt Institute, digital humanist, and life-long library patron. My research is grounded in the principles of data feminism, and a desire to connect people to information while making space for nuance and exploration. My passion for libraries is grounded in a desire to help promote information literacy and access through fun programming and critical pedagogy.</p>
+      <h2 class="rethink-sans-subhead">About Me:</h2>
+      <p class="rethink-sans-bodyfont">I am a MsLIS graduate student at the Pratt Institute, digital humanist, and life-long library patron. My research is grounded in the principles of data feminism, and a desire to connect people to information while making space for nuance and exploration. My passion for libraries is grounded in a desire to help promote information literacy and access through fun programming and critical pedagogy.</p>
       </div>
     <div id="button-menu">
       <br><br>
