--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
   <div class="container">
     <div>
         <div class="portfolio-heading">
-          <h2>Queer Speculative Fiction Libguide</h2>
+          <h2>Queer Speculative Fiction LibGuide</h2>
         </div>
         <a href="libguide.html"><img class="project-thumbnail" src="libguide-thumb.svg" alt=""></a>
     </div>
