accordion menu work

--- a/libguide.html
+++ b/libguide.html
@@ -18,10 +18,26 @@
     <div class="portfolio-page-content">
         <div>
             <!-- Should I make this a table? Or should I do headers and then content? Or an accordion?? -->
-            <p>Project Link</p>
+            <button class="accordion">Project Description</button>
+            <div class="panel">
+              <p>Lorem Ipsum...</p>
+            </div>
+            <button class="accordion">Methods</button>
+            <div class="panel">
+              <p>Lorem Ipsum...</p>
+            </div>
+            <button class="accordion">My Role</button>
+            <div class="panel">
+              <p>Lorem Ipsum...</p>
+            </div>
+            <button class="accordion">Skills Highlighted</button>
+            <div class="panel">
+              <p>Lorem Ipsum...</p>
+            </div>
+            <!-- <p>Project Link</p>
             <p>Project Description</p>
             <p>Methods</p>
-            <p>Showcased Skills</p>
+            <p>Showcased Skills</p> -->
         </div>
         <div class="portfolio-page-embed">
         <object data="Lorum Ipsum Test PDF.pdf#page=1" type="application/pdf" width="100%" height="100%">
