working on accordion

--- a/portfolio.html
+++ b/portfolio.html
@@ -54,4 +54,5 @@
   <footer>
     <p class="attribution">© Madeleine Casey 2025.  All graphics created by Madeleine Casey.</p>
   </footer>
+<script src="scripts.js"></script>
 </body>
