--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   	<title>Maddy Casey Portfolio</title>
   	<meta name="description" content="A digital portfolio reflecting my work as a graduate student in the MsLIS program at the Pratt Institute">
     <link rel="stylesheet" href="./styles.css">
+    <script src="myscripts.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Cantora+One&family=Galindo&family=Gorditas:wght@400;700&family=Rethink+Sans:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
