fixing responsive design breakpoints

--- a/libguide.html
+++ b/libguide.html
@@ -16,8 +16,8 @@
     <header class="libguide-head-background">
         <h1 class="libguide-h1">Queer Speculative<br>Fiction Libguide</h1>
     </header>
-    <div id="testhi">
-      <div class="testhey" id="nav-block">
+    <div class="subpage-content">
+      <div class="subpage-section" id="nav-block">
         <nav class="portfolio-nav">
           <div class="rethink-sans-bodyfont">
             <ul class="nav-list">
@@ -28,7 +28,12 @@
           </div>  
         </nav>
       </div>
-      <div class="testhey">
+      <div class ="subpage-section">
+        <h2>Project Title</h2>
+        <p><a>Project link</a></p>
+        <a id="folder-download" href="Lorum Ipsum Test PDF.pdf" download="">Download my resume</a>
+      </div>
+      <div class="subpage-section">
        <div class="portfolio-page-content">
           <div class="portfolio-page-box">
            <div class="portfolio-page-embed">
