responsive design work

--- a/libguide.html
+++ b/libguide.html
@@ -7,13 +7,12 @@
   	<meta name="description" content=""A digital portfolio reflecting my work as a graduate student in the MsLIS program at the Pratt Institute">
     <link rel="stylesheet" href="./styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Cantora+One&family=Galindo&family=Gorditas:wght@400;700&family=Rethink+Sans:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
     <script src="scripts.js"></script>
   </head>
 <body>
-    <header class="libguide-head-background">
+    <header class="sub-portfolio-head-background" id="libguide-head-background">
         <h1 class="libguide-h1">Queer Speculative<br>Fiction Libguide</h1>
     </header>
     <div class="subpage-content">
@@ -29,7 +28,7 @@
         </nav>
       </div>
       <div class ="subpage-section">
-        <h2>Project Title</h2>
+        <h2>Access this Project</h2>
         <p><a>Project link</a></p>
         <a id="folder-download" href="Lorum Ipsum Test PDF.pdf" download="">Download my resume</a>
       </div>
