--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
   </head>
 <body>
 <header>
-  <h1>Student Work Portfolio</h1>
+  <h1 id="portfolio-h1">Student Work Portfolio</h1>
 </header>
 
   <div class="container">
