flex for access link section

--- a/libguide.html
+++ b/libguide.html
@@ -28,9 +28,15 @@
         </nav>
       </div>
       <div class ="subpage-section">
-        <h2>Access this Project</h2>
-        <p><a>Project link</a></p>
-        <a id="folder-download" href="Lorum Ipsum Test PDF.pdf" download="">Download my resume</a>
+        <div class="access-project-section">
+          <div class="access-project-head">
+            <h2 class="rethink-sans-subhead">Access this Project:</h2>
+          </div>
+          <div class="access-project-links rethink-sans-bodyfont">
+            <p><a>Project link</a></p>
+            <a id="folder-download" href="Lorum Ipsum Test PDF.pdf" download="">See the Project</a>
+          </div>  
+        </div>
       </div>
       <div class="subpage-section">
        <div class="portfolio-page-content">
@@ -67,5 +73,6 @@
       </div>
     </div>
     <footer>
+      <p class="attribution">© Madeleine Casey 2025.  All graphics created by Madeleine Casey.</p>
     </footer>
 </body>
