--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Cantora+One&family=Galindo&family=Gorditas:wght@400;700&family=Rethink+Sans:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
-    <!--<link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=ADLaM+Display&family=Calistoga&family=Chela+One&family=Cherry+Swash&family=Dangrek&family=DynaPuff&family=Gorditas&family=Lily+Script+One&family=Mochiy+Pop+P+One&family=Moo+Lah+Lah&display=swap" rel="stylesheet">
-  -->
     <script src="scripts.js"></script>
   </head>
 
@@ -24,41 +20,18 @@
   </header>
   <div class="home-container">
     <div id="about-blurb">
-      <h2 class="rethink-sans-subhead">About Me:</h2>
+      <h2 class="rethink-sans-subhead" id="home-h2">About Me:</h2>
       <p class="rethink-sans-bodyfont">I am a MsLIS graduate student at the Pratt Institute, digital humanist, and life-long library patron. My research is grounded in the principles of data feminism, and a desire to connect people to information while making space for nuance and exploration. My passion for libraries is grounded in a desire to help promote information literacy and access through fun programming and critical pedagogy.</p>
-      </div>
+    </div>
     <div id="button-menu">
-      <br><br>
-      <button id="portfolio-button"><a href="portfolio.html">Portfolio</a></button><br>
-      <button id="resume-button"><a href="resume.html">Resume</a></button>
-    <!-- <img src="libguide-thumb.svg" alt=""> -->
+      <div class="home-button-layout">
+        <button id="portfolio-button"><a href="portfolio.html">Portfolio</a></button><br>
+      </div>
+      <div class="home-button-layout">
+        <button id="resume-button"><a href="resume.html">Resume</a></button>
+      </div>
     </div>
   </div>
- 
- <!--<section class="homepage">-->
-  	
-    <!-- Note- specifying width as 100% for images is necessary to ensure images fill the exact size of their div containers- done on advice from the tech tutor -->
-  <!--	  <section class="background-graphic">
-  		<div class="closet-graphic">
-  			<picture>
-          <source media="(max-width: 799px)" srcset="images/homepage-background-graphic-mobile-1.png">
-          <source media="(min-width: 800px)" srcset="images/homepage-background-graphic-desktop-1.png">
-  			<img src="images/homepage-background-graphic-desktop-1.png" alt="A cartoon pink bureau filled with clickable graphics of colorful clothes, centered in a colorful room.">
-  			</picture>
-        <div class="outfit" id="pd-closet-graphic"><a href="pink-dress.html"><img src="images/pink-dress-closet-graphic-1.png" alt="A-line pink dress. Links to sub page about the dress"></a></div>
-        <div class="outfit" id="gt-closet-graphic"><a href="green-top.html"><img src="images/green-top-closet-graphic-1.png" alt="Green floral print top. Links to subpage about the top"></a></div>
-        <div class="outfit" id="bt-closet-graphic"><a href="black-shirt.html"><img src="images/black-top-closet-graphic-1.png" alt="Black t-shirt. Links to subpage about the top."></a></div>
-        <div class="outfit" id="ps-closet-graphic"><a href="pleated-skirt.html"><img src="images/pleated-skirt-closet-graphic-1.png" alt="pink and orange color pleated skirt. Links to subpage about the skirt."></a></div>
-        <div class="outfit" id="ds-closet-graphic"><a href="disco-skirt.html"><img src="images/disco-skirt-closet-graphic-1.png" alt="Sparkly silver skirt. Links to subpage about the skirt."></a></div>
-  		</div>
-    </section>
-</section>
--->
-<!--
-  <div class="about-message">
-        <h2>Test</h2>
-  </div>
---> 
 
   <footer>
     <p class="attribution">© Madeleine Casey 2025.  All graphics created by Madeleine Casey.</p>
