resume page work

--- a/libguide.html
+++ b/libguide.html
@@ -22,6 +22,12 @@
             <ul class="nav-list">
               <li><a id="nav-home" href="index.html">Home</a></li>
               <li><a href="portfolio.html">Portfolio</a></li>
+                <!-- <ul>
+                  <li>Books as Art, Art as Data</li>
+                  <li>Python Metadata Validator</li>
+                  <li>Exploring Demographic Homogeneity in Librarianship</li>
+                  <li>This Book is Challeng(ing/ed)</li>
+                </ul> -->
               <li><a href="resume.html">Resume</a></li>
             </ul>
           </div>  
