--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
   </div>
   <div>
     <div class="portfolio-heading">
-    <h2>This Book Is Challeng(ing/ed)</h2>
+    <h2>This Book is Challeng(ing/ed)</h2>
     </div>
     <a href="collage.html"><img class="project-thumbnail" src="collage-thumb.svg" alt=""></a>
   </div>
