--- a/resume.html
+++ b/resume.html
@@ -13,12 +13,26 @@
 
   <body>
   <header>
-    <h1>Resume</h1>
+    <h1 id="resume-h1">Resume</h1>
   </header>
+  <div class="resume-content">
+    <div class="resume-sections">
+      <nav class="resume-nav">
+        <div class="rethink-sans-bodyfont">
+          <ul class="nav-list">
+            <li><a id="nav-home" href="index.html">Home</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="resume.html">Resume</a></li>
+          </ul>
+        </div>  
+      </nav>
+    </div>
+    <div class="resume-sections">
     <!-- To Add to the directory- PDF file version of my resume -->
-    <a id="resume-download" href="./directory/casey_2025_resume.pdf" download="caseyresume">Download my resume</a><br>
-    <button id="home-page"><a href="index.html">Home Page</a></button>
-    
+      <a class="rethink-sans-subhead" id="resume-download" href="./directory/casey_2025_resume.pdf" download="caseyresume">Download my resume</a><br>
+    <!-- <button id="home-page"><a href="index.html">Home Page</a></button> -->
+    </div> 
+  </div>
     <footer>
         <p class="attribution">© Madeleine Casey 2025.  All graphics created by Madeleine Casey.</p>
       </footer>
