fixing portfolio landing link issue

--- a/portfolio.html
+++ b/portfolio.html
@@ -18,31 +18,41 @@
   <div class="container">
     <div>
         <div class="portfolio-heading">
+          <a href="libguide.html" class="portfolio-link">
           <h2>Queer Speculative Fiction LibGuide</h2>
+          </a>
         </div>
         <a href="libguide.html"><img class="project-thumbnail" src="libguide-thumb.svg" alt=""></a>
     </div>
     <div>
       <div class="portfolio-heading">
+        <a href="baaaad.html" class="portfolio-link">
         <h2>Books as Art,<br>Art as Data</h2>
+        </a>
       </div>
         <a href="baaaad.html"><img class="project-thumbnail" src="baaaad-thumb.svg" alt=""></a>
     </div>
     <div>
       <div class="portfolio-heading">
+        <a href="validator.html" class="portfolio-link">
         <h2>Python<br>Metadata Validator</h2>
+        </a>
       </div>
       <a href="validator.html"><img class="project-thumbnail" src="validator-thumb.svg" alt=""></a>
   </div>
   <div>
     <div class="portfolio-heading">
-    <h2>Exploring Demographic Homogeneity in Librarianship</h2>
+      <a href="lib-diversity.html" class="portfolio-link">
+      <h2>Exploring Demographic Homogeneity in Librarianship</h2>
+      </a>
     </div>
     <a href="lib-diversity.html"><img class="project-thumbnail" src="lib-diversity-thumb.svg" alt=""></a>
   </div>
   <div>
     <div class="portfolio-heading">
-    <h2>This Book is Challeng(ing/ed)</h2>
+      <a href="collage.html" class="portfolio-link">
+      <h2>This Book is Challeng(ing/ed)</h2>
+      </a>
     </div>
     <a href="collage.html"><img class="project-thumbnail" src="collage-thumb.svg" alt=""></a>
   </div>
