work on baaaad page content

--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bitter:ital,wght@0,100..900;1,100..900&family=Cantora+One&family=Galindo&family=Gorditas:wght@400;700&family=Rethink+Sans:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
   </head>
 <body>
-<header>
+<header class="homepage-head-background">
   <h1 id="portfolio-h1">Student Work Portfolio</h1>
 </header>
 
