--- a/baaaad.html
+++ b/baaaad.html
@@ -76,4 +76,20 @@
     <footer>
       <p class="attribution">© Madeleine Casey 2025.  All graphics created by Madeleine Casey.</p>
     </footer>
+    <script>
+        var acc = document.getElementsByClassName("accordion");
+        var i;
+            
+        for (i = 0; i < acc.length; i++) {
+          acc[i].addEventListener("click", function() {
+          this.classList.toggle("active");
+          var panel = this.nextElementSibling;
+          if (panel.style.display === "block") {
+            panel.style.display = "none";
+            } else {
+            panel.style.display = "block";
+            }
+            });
+        }
+      </script>
 </body>
